# sort

./: package.json
src/: App.jsx  ChartPage.jsx  LabeledCheckbox.jsx  LabeledNumberInput.jsx  SortPage.jsx  utils.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  sorts.rs
src-tauri/src-macro/: Cargo.toml
src-tauri/src-macro/src/: lib.rs
